<resources>
    <string name="app_name">Alumni Portal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_title">Post Title</string>
    <string name="image_to_be_uploaded">image to be uploaded</string>
    <string name="posted_by_username">Posted by username</string>
    <string name="time">time</string>
    <string name="title">Title</string>
    <string name="posted_image">posted Image</string>
    <string name="post_description">Post Description</string>
    <string name="upvote">upvote</string>
</resources>
