<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="5dp"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPostBackground"
        android:orientation="vertical">

        <!--Username and post title-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/postProfileIV"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_user_default" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="posted by "
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/postUsernameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="username"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text=" @" />

                <TextView
                    android:id="@+id/postTimeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/time"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>

        <!-- Title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/postTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="3dp"
                android:text="@string/title"
                android:textColor="#000000"
                android:textSize="24sp" />

        </LinearLayout>

        <!-- Post Image -->
        <ImageView
            android:id="@+id/postIV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="@color/colorWhite"
            android:contentDescription="@string/posted_image" />

        <!-- Post Description -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/postDescTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/post_description"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>

        <!-- Upvotes -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp">

            <ImageButton
                android:id="@+id/upvoteBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/upvote"
                android:padding="2dp"
                android:src="@drawable/ic_up_grey" />

            <TextView
                android:id="@+id/voteCountTV"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="100k" />

            <ImageButton
                android:id="@+id/downvoteBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="2dp"
                android:src="@drawable/ic_down_grey" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>