<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EDED"
    tools:context=".SendPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <!-- Enter Post Title -->
        <EditText
            android:id="@+id/postTitleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/post_title"
            android:padding="10dp"
            android:singleLine="true" />

        <!-- Images -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">



            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="50dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="45dp">

                <ImageView
                    android:id="@+id/cameraImageIV"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image_to_be_uploaded"
                    android:src="@drawable/ic_camera" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="50dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="45dp">

                <ImageView
                    android:id="@+id/galleryImageIV"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image_to_be_uploaded"
                    android:src="@drawable/ic_library" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <ImageView
            android:id="@+id/postImageIV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="40dp"/>

        <!-- Post Description-->
        <EditText
            android:id="@+id/postDescET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="start"
            android:hint="@string/post_description"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="10dp" />

        <!-- Upload-->
        <Button
            android:id="@+id/uploadButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="30dp"
            android:text="Upload" />

    </LinearLayout>

</ScrollView>